--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<meta name="keywords" content="Compliance, Consultoria, Programa de Integridade, Pequenas e Médias Empresas" />
 	<meta name="author" content="diogo azedo - product manager" />
 
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KJ3RJMD');</script>
+	<!-- End Google Tag Manager -->
+
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Integridade - Consultoria em Compliance para Pequenas e Médias Empresa."/>
 	<meta property="og:image" content="./images/og_image_f5.png"/>
@@ -71,6 +79,11 @@
 		</div>
 	</nav>
 -->
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KJ3RJMD"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	
 	<div id="colorlib-page">
 		<header>
