adding footer note trademark

--- a/index.html
+++ b/index.html
@@ -318,6 +318,15 @@
 			</div>
 		</div>
 	</div>
+	<section class="copyright_part">
+        <div class="container">
+            <div class="row align-items-center">
+				<hr/>
+                <p class="footer-text m-0 col-lg-8 col-md-12">
+                feito por <a href="https://diogoazedo.com">diogo azedo</a> | 2020</p>
+            </div>
+		</div>
+	</section>
 </footer>
 
 	<!-- jQuery -->
